# scout

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily.yml
config/: scoring.yml  sources.yml
data/: 2026-05-29.json  2026-05-30.json  2026-05-31.json
reports/: 2026-05-29.md  2026-05-30.md  2026-05-31.md
src/: __init__.py  approve.py  cli.py  collect.py  config.py  github_client.py  history.py  pipeline.py  publish.py  score.py
src/_defaults/: scoring.yml  sources.yml
tests/: test_cli.py  test_collect.py  test_config.py  test_history.py  test_score.py
