[project]
name = "daily-github-shortlist"
version = "0.1.0"
description = "A GitHub repository discovery pipeline that scores projects and publishes a daily top 5 list."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "requests>=2.32",
    "PyYAML>=6.0",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
shortlist = "src.pipeline:main"
shortlist-approve = "src.approve:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
