[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-github-shortlist"
version = "0.2.0"
description = "Daily top-5 GitHub repo shortlist, scored and printed to your terminal."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "requests>=2.32",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
scout = "src.cli:main"

[tool.setuptools]
packages = ["src", "src._defaults"]

[tool.setuptools.package-data]
"src._defaults" = ["*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
